--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/guilhermeHenry/oocss/issues"
   },
-  "homepage": "https://github.com/guilhermeHenry/oocss#readme"
+  "homepage": "https://github.com/guilhermeHenry/oocss#readme",
+  "dependencies": {
+    "css-reset": "git+https://github.com/guilhermeHenry/css-reset.git"
+  }
 }
